bk_ida/gccida/c0/recog_6
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7413:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1 = ( rtx)x0[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7419:12: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( x1[1] == 1 ) 
     ~~~~~ ^  ~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7424:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2d; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7431:12: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( x1[1] != 2 ) 
     ~~~~~ ^  ~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7436:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2e; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7450:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3e; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7451:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3f = (  struct rtx_def *)x2f[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7454:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3f; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7455:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)&x1[1], recog_data_0.operand[1]) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7456:35: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( x1[1].fld[0].rtx, recog_data_0.operand[2]) 
                                  ^~~~~~~~~~~~
                                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7480:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3e; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7481:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3g = (  struct rtx_def *)x2f[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7484:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3g; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7485:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)&x1[1], recog_data_0.operand[1]) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7486:35: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& rtx_equal_p( x1[1].fld[0].rtx, recog_data_0.operand[2]) 
                                  ^~~~~~~~~~~~
                                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7489:37: error: use of undeclared identifier 'recog_data_0'
&& ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] != 66 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7490:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[2] != 66) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7512:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3e; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/insn-recog.c:7513:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3h = (  struct rtx_def *)x2f[1]; 
                          ^~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_6/src/obj/insn-recog.o] Error 1
